--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <textarea
           id="message"
           rows="4"
-          placeholder="Унесите вашу поруку..."
+          placeholder="Унесите вашу поруку.."
         ></textarea>
       </div>
       <button onclick="sendMessage()">
